Insert is working, continued testing.

--- a/src/com/flickipedia/fxml/Main.fxml
+++ b/src/com/flickipedia/fxml/Main.fxml
@@ -69,6 +69,8 @@
 						<TextField fx:id="countryField" />
 					</children>
 				</HBox>
+            <Label text=" " />
+            <Button fx:id="insertBtn" mnemonicParsing="false" onAction="#insertBtnAction" text="Insert New Movie" />
 			</children>
 		</VBox>
 	</left>
